--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -6,6 +6,10 @@ img {
     width: 400px;
 }
 
+.divClass {
+    text-align: center;   
+}
+
 #thirdDiv {
     height: 600px;
     width: 500;
@@ -13,8 +17,16 @@ img {
     color: purple;
     padding: 10px 50px 30px 0px;
     border-width: 50px;
-    border-color: royalblue;
+    border-color: royalblue;    
 }
+
+ul {
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+
+}
+
 
 #spanId {
     font-size: 18px;
@@ -26,7 +38,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;    
-    text-align: center;
+    
 }
 
 
